@@ -1,5 +1,6 @@
 Version 2.02.170 - 
 ==================================
+  Look for limited thin pool metadata size when using 16G metadata.
   Add lvconvert pool creation rule disallowing options with poolmetadata.
   Fix lvconvert when the same LV is incorrectly reused in options.
   Fix lvconvert VG name validation in option values.
